fix contrast

--- a/styles/base.css
+++ b/styles/base.css
@@ -115,7 +115,7 @@ nav ul{
 
 nav a {
     display: block;
-    color: rgb(94, 24, 36);
+    color: black;
     text-align: center;
     padding: 1rem;
     text-decoration: none;
@@ -128,7 +128,7 @@ nav a:hover {
     background-color: rgba(255,255,255, 0.2);
 }
 .active{
-    color: yellow;
+    color: #4c1075;
   
 }
 
